
2006-09-??  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* using CDI library version 1.0.2
	* remapbil, remapbic: speedup for regional lonlat grids
	* Seltime: print warning message if parameter not found
	* pstreamDefVlist: unpack netCDF data if datatype = FLT64
	* Version 1.0.2 released

2006-08-01  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* using CDI library version 1.0.1
	* add option -b to set the number of bits for the output precision
	* support of 1 to 32 bit GRIB data
	* set MIN_STACK_SIZE to 64MB
	* seldate: use parameter - for min and max val
	* seldate: change date format to YYYY-MM-DDThh:mm [request: Martina Stockhaus]
	* New operator: selstdname, showstdname [request: Martina Stockhaus]
	* New operator: setrcaname, seloperator for RCA GRIB datasets [Frida Brantvall]
	* New operator: selltype, setltype, chltype, showltype [together with Frida Brantvall]
	* New operator: setpartabv
	* add new parameter table format
	* fix problems on cygwin [report: Mark Hadfield]
	* merge: move vlistDestroy after streamClose [report: Matthias Cuntz]
	* gradsdes: fix bug for only one record without time [report: Angelika Heil]
	* gradsdes: fix problem for variable names with - character
	* namelist update
	* New module: Setbox [Etienne Tourigny]
	* history format changed to nco [Etienne Tourigny]
	* process: set MAX_ARGS from 1024 to 8192
	* Version 1.0.1 released

2006-06-15  Uwe Schulzweida  <schulzweida@dkrz.de>

	* using CDI library version 1.0.0
	* New operator: dv2ps (Wind) [request: Luis Kornblueh]
	* New module: Arithlat (mulcoslat, divcoslat) <- docu missing
	* setreftime: use taxisDuplicate to copy bounds [report: Ivonne Anders]
	* Seasstat: bug fix for datasets with only 1 season [report: Simon Blessing]
	* Vertint: remove special treatment for geopoth
	* configure: check compiler version
	* Version 1.0.0 released

2006-05-04  Uwe Schulzweida  <schulzweida@dkrz.de>

	* using CDI library version 0.9.7
	* New module: Mergetime [request: Stefanie Legutke]