@@ -10,7 +10,7 @@
 \put(0,0.0){\line(1,0){3.95}}
 \end{picture}
 \begin{flushright}
-{\small{Climate Data Operators \\ Version 1.0.1 \\ August 2006}}
+{\small{Climate Data Operators \\ Version 1.0.2 \\ September 2006}}
 \end{flushright}
 
 \vspace*{0mm}
